Move question-service related files

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,6 @@
+# For Google OAuth
 GOOGLE_CLIENT_ID=1061737098053-crsi5gjm9n4slm2gbqvimfgv41n8he40.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://felix-ong:mCRHbxETWtQjcu33@cluster0.u7mjrgd.mongodb.net/?retryWrites=true&w=majority
-
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 # Used to hash tokens for use in production
