--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -1,8 +1,13 @@
 {
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
+  },
+  "scripts": {
+    "start": "node src/index.js"
   }
 }
