--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,5 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 # Used to hash tokens for use in production
 NEXTAUTH_SECRET=JNFF0iAryPKCwQMHou0w7X2obW077xMt/VZjGBcl5f8=
+# MONGODB_URL
+NEXT_PUBLIC_QUESTION_BACKEND_URL=http://localhost:5000
