--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,9 @@
 # For Google OAuth
-GOOGLE_CLIENT_ID=1061737098053-crsi5gjm9n4slm2gbqvimfgv41n8he40.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 # Used to hash tokens for use in production
-NEXTAUTH_SECRET=JNFF0iAryPKCwQMHou0w7X2obW077xMt/VZjGBcl5f8=
+NEXTAUTH_SECRET=
 # MONGODB_URL
 NEXT_PUBLIC_QUESTION_BACKEND_URL=http://localhost:5000
