--- a/backend/collaboration-service/frontend/package.json
+++ b/backend/collaboration-service/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "next dev -p 3050",
     "build": "next build",
     "start": "next start"
   },
