--- a/user-service/backend/package.json
+++ b/user-service/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cs3219",
+  "name": "user-service-backend",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "latest",
     "express": "^4.18.2",
-    "mysql2": "^3.6.1"
+    "pg": "^8.11.3"
   }
 }
