--- a/user-service/backend/package.json
+++ b/user-service/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +14,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
     "dotenv": "latest",
     "express": "^4.18.2",
+    "google-auth-library": "^9.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
