--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ace-builds": "^1.28.0",
     "autoprefixer": "10.4.16",
-    "bufferutil": "^4.0.7",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "mongodb": "^6.1.0",
@@ -20,6 +21,7 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
