--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
+    "dependencies": "^0.0.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "mongodb": "^6.1.0",
