--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -6,7 +6,9 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "scripts": {
     "start": "node src/index.js",
