--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dedent": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
