--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "bufferutil": "^4.0.7",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "mongodb": "^6.1.0",
@@ -21,6 +21,9 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
