--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dedent": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -12,7 +13,7 @@
     "remark-html": "^16.0.1"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js"
   }
 }
