--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "y-websocket": "^1.5.0"
   }
 }
