--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "utf-8-validate": "^5.0.10",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.8"
   }
 }
