--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "requirements": "^1.4.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
