--- a/backend/matching-service/.env.example
+++ b/backend/matching-service/.env.example
@@ -2,3 +2,5 @@ MATCHING_SERVER_PORT=5001
 RABBITMQ_URL='amqp://guest:guest@localhost'
 RABBITMQ_PORT=5672
 FRONTEND_URL='http://localhost:3000'
+QUESTION_SERVICE_PORT=5000
+QUESTION_SERVICE_URL=http://localhost:5000
