--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 # For Google OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 # Used to hash tokens for use in production
