--- a/backend/matching-service/.env.example
+++ b/backend/matching-service/.env.example
@@ -1,5 +1,6 @@
 MATCHING_SERVER_PORT=5001
-RABBITMQ_URL='amqp://guest:guest@localhost'
+RABBITMQ_DOMAIN_LOCAL='guest:guest@localhost'
+RABBITMQ_SERVICE_NAME='rabbitmq'
 RABBITMQ_PORT=5672
 FRONTEND_URL='http://localhost:3000'
 QUESTION_SERVICE_PORT=5000
