healthcheck for rabbitmq

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       start_period: 20s
 
   matching-service:
-    build: .
+    build: ./matching-service
     ports:
       - '5001:5001'
     env_file:
-      - .env.local
+      - ./matching-service/.env.local
     depends_on:
       rabbitmq:
         condition: service_healthy
