--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,26 @@
 version: '3'
 services:
+  user-service:
+    build: ./user-service
+    ports:
+      - '3001:3001'
+    env_file:
+      - ./user-service/.env
+
+  question-service:
+    build: ./question-service
+    ports:
+      - '5000:5000'
+    env_file:
+      - ./question-service/.env.local
+
+  collaboration-service:
+    build: ./collaboration-service
+    ports:
+      - '5555:5555'
+    # env_file:
+    #   - ./collaboration-service/.env.local
+
   rabbitmq:
     image: 'rabbitmq:3.12-management'
     ports:
@@ -7,8 +28,8 @@ services:
       - '15672:15672'
     healthcheck:
       test: rabbitmq-diagnostics check_port_connectivity
-      interval: 15s
-      retries: 2
+      interval: 5s
+      retries: 3
       start_period: 20s
 
   matching-service:
