--- a/backend/matching-service/.production.env
+++ b/backend/matching-service/.production.env
@@ -1,5 +1,5 @@
 MATCHING_SERVER_PORT=5001
-RABBITMQ_DOMAIN='guest:guest@localhost'
+RABBITMQ_DOMAIN='rabbitmq'
 RABBITMQ_PORT=5672
 FRONTEND_URL='http://localhost:3000'
 QUESTION_SERVICE_PORT=5000
