--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -17,6 +17,7 @@
     "cookie": "^0.5.0",
     "dotenv": "latest",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "google-auth-library": "^9.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
