--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bufferutil": "^4.0.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
