--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     build: ./collaboration-service
     ports:
       - '5555:5555'
-    # env_file:
-    #   - ./collaboration-service/.env.local
 
   rabbitmq:
     image: 'rabbitmq:3.12-management'
@@ -41,3 +39,15 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - '80:80'
+    volumes:
+      - ./api-service/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - user-service
+      - question-service
+      - collaboration-service
+      - matching-service
