--- a/backend/api-service/nginx.conf
+++ b/backend/api-service/nginx.conf
@@ -19,6 +19,10 @@ http {
             proxy_pass http://question-service:5000/;
         }
 
+        location /questions/ {
+            proxy_pass http://question-service:5000/questions/;
+        }
+
         location /socket.io/ {
             proxy_pass http://matching-service:5001;
             proxy_http_version 1.1;
