add nginx config file

--- a/backend/api-service/nginx.conf
+++ b/backend/api-service/nginx.conf
@@ -15,6 +15,10 @@ http {
             proxy_pass http://collaboration-service:5555/;
         }
 
+        location /ai/ {
+            proxy_pass http://ai-service:4444/;
+        }
+
         location /question/ {
             proxy_pass http://question-service:5000/;
         }
