--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,4 @@ NEXTAUTH_SECRET=
 # MONGODB_URL
 NEXT_PUBLIC_QUESTION_BACKEND_URL=http://localhost:5000
 NEXT_PUBLIC_MATCHING_SERVICE_URL=http://localhost:5001
+NEXT_PUBLIC_AI_SERVICE_URL=http://localhost:4444
